Added bells and whistles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,4 +15,11 @@ body {
 
 .btn-primary {
   border: white;
+  transition: all 0.5s ease;
+}
+
+.btn-primary:hover {
+  cursor: pointer;
+  background: mediumvioletred;
+  opacity: 0.8;
 }
